[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/item_icons/铁剑.png" type="Texture" id=1]
[ext_resource path="res://Item.gd" type="Script" id=2]
[ext_resource path="res://assets/font/PuHuiTi-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://TextureRect.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0.945098, 0.952941, 0, 1 )
font_data = ExtResource( 3 )

[node name="Item" type="Node2D" groups=["Persist"]]
position = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture_normal = ExtResource( 1 )
expand = true
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 0.777946
margin_top = 20.4284
margin_right = 36.7779
margin_bottom = 43.4284
rect_scale = Vector2( 1.2, 1.2 )
custom_fonts/font = SubResource( 1 )
text = "X99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 1.5
margin_top = -0.5
margin_right = 41.5
margin_bottom = 42.5
custom_colors/font_outline_modulate = Color( 0.168627, 0.694118, 0.0745098, 1 )
custom_fonts/font = SubResource( 2 )
text = "213"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 69.0519
margin_top = 7.14331
margin_right = 109.052
margin_bottom = 30.1433
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_TextureRect_mouse_exited"]
